# hans

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  get_audio.py  main.py  pyproject.toml
.github/workflows/: pr.yaml
client/: .env example  get_audio.py  pyproject.toml  setup.sh
client/src/: message_listener.py  process_input.py
resources/: test-only-key.pem
server/: .env.example  .gitignore  main.py  pyproject.toml
server/src/: command_runner.py  message_sender.py  voice_detector.py
transcribe/: .gitignore  CMakeLists.txt  pyproject.toml
transcribe/src/: bindings.cpp  library.cpp  library.h
transcribe/src/transcribe/: __init__.py  _core.pyi
transcribe/tests/: test_basic.py
whisppy/: CMakeLists.txt  README.md  pyproject.toml
whisppy/src/: bindings.cpp  library.cpp  library.h
whisppy/src/whisppy/: __init__.py
whisppy/tests/: test_basic.py
