[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "durations-nlp>=1.0.1",
    "number-parser>=0.3.2",
    "numpy>=2.2.1",
    "pywhispercpp>=1.3.0",
    "silero-vad>=5.1.2",
    "soundfile>=0.12.1",
]
