[project]
name = "whisppy"
version = "0.1.0"
description = "whisper.cpp bindings for hans"
readme = "README.md"
authors = [
    { name = "Sam Burba", email = "github@samburba.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.2",
    "pytest>=8.3.4",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"
